# search_concept

./: .clang-format  .gitignore  CMakeLists.txt  README.mdown
cmake/: BuildOptions.cmake
ddocs/: COMPILER.mdown  build.mdown  error_handling.mdown  programming_style.mdown
scripts/: build_debug.sh  build_debug_with_cov.sh  build_release.sh  run_tests_with_prof_info.sh
src/: client_main.cpp  compiler_main.cpp  tests_main.cpp
src/apps/client/: CMakeLists.txt  client_main.cpp
src/apps/compiler/: CMakeLists.txt  compiler_main.cpp
src/apps/compiler/src/: compiler_main.cpp  osm_stream_read.cpp  osm_stream_read.h  playground.cpp  playground.h
src/apps/tests_unit/: CMakeLists.txt  checks.cpp  dal_tests.cpp  tests_main.cpp
src/common/: CMakeLists.txt
src/common/include/common/: pch.h
src/common/src/: pch.cpp
src/srchlib/: CMakeLists.txt
src/srchlib/include/srchlib/dal/: dal.h  errors.h
src/srchlib/include/srchlib/fmindex/: encoder.h
src/srchlib/src/common/tests/: context_tests.cpp
src/srchlib/src/dal/: dal.cpp
src/srchlib/src/dal/tests/: dal_tests.cpp
src/srchlib/src/fmindex/: decoder.cpp  fmindex.cpp
src/sskitlib/: CMakeLists.txt
src/sskitlib/include/sskitlib/dal/: dal.h  errors.h
src/sskitlib/include/sskitlib/fmindex/: encoder.h  errors.h  fmindex.h
src/sskitlib/src/common/: context.cpp
src/sskitlib/src/common/tests/: context_tests.cpp
src/sskitlib/src/dal/: dal.cpp
src/sskitlib/src/dal/tests/: dal_tests.cpp
src/sskitlib/src/fmindex/: fmindex.cpp
src/sskitlib/src/fmindex/tests/: fmindex_tests.cpp
